kubernetes/homer/homer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
  namespace: homer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homer
  template:
    metadata:
      labels:
        app: homer
    spec:
      containers:
        - name: homer
          image: b4bz/homer:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - name: config
              mountPath: /www/assets/config.yml
              subPath: config.yml
            - name: custom-css
              mountPath: /www/assets/custom.css
              subPath: custom.css
      volumes:
        - name: config
          configMap:
            name: homer-config
            items:
              - key: config.yml
                path: config.yml
        - name: custom-css
          configMap:
            name: homer-config
            items:
              - key: custom.css
                path: custom.css
---
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: homer
spec:
  selector:
    app: homer
  ports:
    - port: 3005
      targetPort: 8080
      nodePort: 30002
      protocol: TCP
  type: NodePort
